# Locadora-system

./: CMakeLists.txt  Cliente.c  Documentação.txt  Locadora.c  README.md  categoriaF.c  categoriaF.h  cliente.c  filmes.c  filmes.h  fucGlobal.c  funcionario.c  gerence.c  gerencePointer.c  locadora.c  main.c
cabecalhos/: categoriaF.h  cliente.h  dadosImEx.h  datas.h  feedback.h  filmes.h  fornecedor.h  fucGlobal.h  funcionarios.h  locacao.h  locadora.h
codigo/: arquivos.c  categoriaF.c  cliente.c  dadosImEx.c  datas.c  feedback.c  filmes.c  fornecedor.c  funcionarios .c  funcionarios.c  locacao.c  locadora.c
